# hermes

./: .gitignore  CHANGELOG.md  README.md  package.json  plan.md
.agents/design-docs/: 00-product-brief.md  01-design-principles.md  02-information-architecture.md  03-app-shell.md  04-visual-system.md  05-interaction-model.md  06-sessions.md  07-git-files-and-context.md  08-home-connections-settings.md  09-theme-and-tokens.md  10-implementation-roadmap.md  README.md
.agents/design-docs/adr/: 001-terminal-stack-policy.md
.agents/design-docs/specs/: component-rules.md  top-region-spec.md
.agents/design-docs/tokens/: theme.css  theme.tokens.json
.agents/skills/taste-skill/: SKILL.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppDialogs.tsx  AppHeader.tsx  AppRail.tsx  AppShell.tsx  AppStage.tsx  PageFrame.tsx  ShellTopbar.tsx
apps/desktop/src/features/dashboard/: DashboardOverview.tsx  HostDashboard.tsx
apps/desktop/src/features/files/: FileBrowserPage.tsx
apps/desktop/src/features/git/: GitPage.tsx
apps/desktop/src/features/keychain/: KeychainItemEditor.tsx  (+2 more)
apps/desktop/src/lib/: app.ts  relay.ts  runtime.ts  settings.ts  useAppShortcuts.ts  useBufferedTerminalInput.ts
apps/desktop/src/styles/: app.css  base.css  shell.css
apps/mobile/: package.json
apps/mobile/src/: index.ts
apps/server/: Dockerfile  Dockerfile.runtime  README.md  package.json  tsconfig.json
apps/server/src/: index.ts
docs/: architecture.md  decisions.md  roadmap.md
docs/iris/: README.md  engineering-brief.md
(+22 files in other folders)
