[package]
name = "hermes-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
keyring = "3.6.2"
portable-pty = "0.8.1"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.2.5", features = [] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
