[package]
name = "hermes-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"
keyring = "3.6.2"
portable-pty = "0.8.1"
rand = "0.8.5"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
